# libBitbotEncos

./: .gitignore  CMakeLists.txt  Encos__bus_8h.html  Encos__bus_8h.js  Encos__bus_8h__dep__incl.map  Encos__bus_8h__dep__incl.md5  Encos__bus_8h__incl.map  Encos__bus_8h__incl.md5  Encos__bus_8h_source.html  Encos__bus__msg_8h.html  Encos__bus__msg_8h.js  Encos__bus__msg_8h__dep__incl.map  Encos__bus__msg_8h__dep__incl.md5  Encos__bus__msg_8h__incl.map  Encos__bus__msg_8h__incl.md5  Encos__bus__msg_8h_source.html  Encos__device_8hpp.html  Encos__device_8hpp.js  Encos__device_8hpp__dep__incl.map  Encos__device_8hpp__dep__incl.md5  Encos__device_8hpp__incl.map  Encos__device_8hpp__incl.md5  Encos__device_8hpp_source.html  Encos__joint_8h.html  Encos__joint_8h.js  Encos__joint_8h__dep__incl.map  Encos__joint_8h__dep__incl.md5  Encos__joint_8h__incl.map  Encos__joint_8h__incl.md5  Encos__joint_8h_source.html  Encos__kernel_8hpp.html  Encos__kernel_8hpp.js  Encos__kernel_8hpp__incl.map  Encos__kernel_8hpp__incl.md5  Encos__kernel_8hpp_source.html  Joint__AutoZero_8hpp.html  Joint__AutoZero_8hpp__dep__incl.map  Joint__AutoZero_8hpp__dep__incl.md5  Joint__AutoZero_8hpp__incl.map  Joint__AutoZero_8hpp__incl.md5  (+249 more)
doc/: BitbotEncosBusConfig.md  BitbotEncosConfig.md  BitbotEncosMotorMotion.md  CMakeLists.txt  Hardware.vsdx
doc/doxygen-awesome-css-main/: doxygen-awesome-fragment-copy-button.jsZone.Identifier
include/bus/: Encos_bus.h  Encos_bus_msg.h
include/device/: Encos_device.hpp  Encos_joint.h  yesense_imu.h
include/kernel/: Encos_kernel.hpp  Joint_AutoZero.hpp
lib/soem/: CMakeLists.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  (+44 more)
src/bus/: BusDeviceRegister.cpp  Encos_bus.cpp
src/device/: Encos_joint.cpp  yesense_imu.cpp
